# onto-canon6

./: .gitignore  AGENTS.md  CLAUDE.md  COORDINATION.md  HANDOFF.md  KNOWLEDGE.md  Makefile  README.md  TEMP_AGENT_ADVISORY.md  TODO.md  meta-process.yaml  pyproject.toml
.claude/: active-work.yaml
.openclaw/: mission-spec.yaml  success-criteria.yaml
config/: CLAUDE.md  config.yaml
data/: PROVENANCE.md
docs/: AUDIT_2026_03_26.md  CLAUDE.md  CONSUMER_INTEGRATION_NOTES.md  EXTRACTION_EXPERIMENT_RUNBOOK.md  ROADMAP.md  STATUS.md  SUCCESSOR_CHARTER.md  assertion_semantics_evaluation.md
investigations/: 2026-03-22-compact2-vs-compact3-chunk003-transfer-gap.md  2026-03-22-full-chunk-compact-observability-reconstruction.md
notebooks/: 00_master_governed_text_to_reviewed_assertions.ipynb  01_policy_contracts.ipynb  02_donor_profile_loading.ipynb  03_validation_slice.ipynb  04_review_slice.ipynb  05_review_reporting_slice.ipynb  06_overlay_application_slice.ipynb  07_text_grounded_import_contract.ipynb  08_text_extraction_slice.ipynb  09_successor_long_term_plan.ipynb  10_live_extraction_evaluation.ipynb  11_future_phase_breakdown.ipynb  12_cli_surface.ipynb  13_dodaf_minimal_second_pack.ipynb  14_artifact_lineage_slice.ipynb  15_epistemic_extension_slice.ipynb  16_governed_bundle_workflow.ipynb  17_canonical_graph_recovery_slice.ipynb  18_stable_identity_slice.ipynb  19_semantic_canonicalization_slice.ipynb  20_whygame_mcp_slice.ipynb  21_phase15_epistemic_corroboration_slice.ipynb  22_evaluator_optimizer_poc.ipynb  README.md  notebook_registry.yaml
src/: CLAUDE.md
(+600 files in other folders)
