[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onto-canon6"
version = "0.1.0"
description = "Successor bootstrap for the onto-canon lineage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.0.1,<4",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "typing-extensions>=4.9.0",
  "rapidfuzz>=3.0",
  "problog>=2.1",
]

[project.scripts]
onto-canon6 = "onto_canon6.cli:main"
onto-canon6-mcp = "onto_canon6.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "mypy>=1.8.0",
  "ruff>=0.3.0",
  "nbformat>=5.10.0",
  "nbclient>=0.10.0",
  "ipykernel>=6.29.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["llm_client", "llm_client.*", "problog", "problog.*"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
